--- a/frontend/src/app/spinner/spinner/spinner.component.scss
+++ b/frontend/src/app/spinner/spinner/spinner.component.scss
@@ -9,6 +9,7 @@ $white: rgb(255, 255, 255);
   width: 100%;
   height: 100%;
   top: 0;
+  overflow:hidden;
   z-index: 1009;
   background-color: $black;
   display: flex;
